// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message renders message 1`] = `
<div
  className="message currentUserMessage"
  id="message-1"
>
  <span
    className="messageText"
  >
    Hello world!
  </span>
  <img
    className="image rounded-circle"
    height="32"
    src="/avatar.jpg"
    width="32"
  />
</div>
`;

exports[`Message with interlocator message renders message 1`] = `
<div
  className="message interlocutorMessage"
  id="message-1"
>
  <img
    className="image rounded-circle"
    height="32"
    src="/avatar.jpg"
    width="32"
  />
  <span
    className="messageText"
  >
    Hello world!
  </span>
</div>
`;
